Fix filesystem path to static config in nginx site config

--- a/roles/nginx/templates/nginx_rdmo.conf.j2
+++ b/roles/nginx/templates/nginx_rdmo.conf.j2
@@ -37,7 +37,7 @@ server {
 	}
 	
 	location /static/ {
-		alias /srv/rdmo/rdmo-app/static_root/;
+		alias {{ rdmo_home }}/rdmo-app/static_root/;
 	}
 }
 
